# Embedded-systems-

./: README.md
Lab3_Buttons/: CMakeLists.txt  compile_commands.json  main.c
Lab3_Buttons/.meproject/: config.json
Lab3_Buttons/.meproject/setup/: setup.json
Lab3_Buttons/.meproject/setup/Debug/include/core/: preinit.h
Lab3_Buttons/.meproject/setup/Debug/include/drv/: drv_i2c_master.h  drv_one_wire.h  drv_port.h  drv_spi_master.h
Lab3_Buttons/.meproject/setup/Debug/include/hal/: hal_adc.h  hal_gpio.h
Lab3_Buttons/.meproject/setup/Debug/include/hal_ll_port/: hal_ll_i2c_master.h
Lab3_Buttons/.meproject/setup/Release/include/drv/: drv_analog_in.h  drv_digital_in.h
Lab3_Buttons/.meproject/setup/Release/include/hal/: hal_pwm.h
Lab3_Buttons/.meproject/setup/Release/include/hal_ll_port/: common_macros.h  hal_ll_spi_master_pin_map.h
Lab3_Buttons/.meproject/setup/Release/include/pic18f45k22/: mcu_definitions.h
Lab3_Buttons/.meproject/setup/Release/include/platform/: ring.h
Lab3_Buttons/build-Group 2/: .ninja_deps  .ninja_log  CMakeCache.txt  Lab3_Buttons.dbg  Lab3_Buttons.dlt  Lab3_Buttons.hex  Lab3_Buttons.lst  Lab3_Buttons_callertable.txt  build.ninja  cmake_install.cmake  compile_commands.json  toolchain.cmake
Lab3_Buttons/build-Group 2/.cmake/api/v1/reply/: cache-v2-82f9a8551d2f899e0ac1.json  cmakeFiles-v1-0da182fef4ab82f6dc68.json  codemodel-v2-65113fea789f87969424.json  index-2025-10-10T07-29-07-0122.json  target-Lab3_Buttons-Debug-166b59d7605dc2b558df.json
Lab4_SevenSeg/: CMakeLists.txt  compile_commands.json  main.c
Lab4_SevenSeg/.meproject/setup/Debug/include/drv/: drv_digital_out.h  drv_name.h
Lab4_SevenSeg/.meproject/setup/Debug/include/hal/: hal_one_wire.h  hal_uart.h
Lab4_SevenSeg/.meproject/setup/Debug/include/hal_ll_port/: hal_ll_analog_in_map.h  hal_ll_gpio.h  hal_ll_gpio_port.h  hal_ll_pps_defines.h  hal_ll_target.h  hal_ll_target_names.h
Lab4_SevenSeg/.meproject/setup/Debug/include/platform/: mikrosdk_version.h
Lab4_SevenSeg/.meproject/setup/Release/include/hal_ll_port/: MikroSDK.HalLowLevel.CORE  MikroSDK.HalLowLevel.I2C.Master  MikroSDK.HalLowLevel.UART  hal_ll_one_wire.h  hal_ll_pin_names.h
Lab5_Temp_Sensor/: CMakeLists.txt  compile_commands.json  main.c
Lab5_Temp_Sensor/.meproject/: config.json
Lab5_Temp_Sensor/.meproject/setup/Debug/include/hal/: hal_spi_master.h
Lab5_Temp_Sensor/.meproject/setup/Debug/include/hal_ll_port/: MikroSDK.HalLowLevel.PPS  MikroSDK.HalLowLevel.TIM  hal_ll_tim.h
Lab5_Temp_Sensor/.meproject/setup/Debug/include/platform/: MikroSDK.Simulation.Button  plot.h  sprint.h
Lab5_Temp_Sensor/.meproject/setup/Release/include/board/: MikroSDK.Board
Lab5_Temp_Sensor/.meproject/setup/Release/include/hal_ll_port/: MikroSDK.HalLowLevelCommon  hal_ll_bit_control.h
Lab5_Temp_Sensor/.meproject/setup/Release/include/platform/: simulation_button.h
Lab5_Temp_Sensor/build-Group 2/: .ninja_deps  .ninja_log  CMakeCache.txt  Lab5_Temp_Sensor.dbg  Lab5_Temp_Sensor.dlt  Lab5_Temp_Sensor.hex  Lab5_Temp_Sensor.lst  Lab5_Temp_Sensor_callertable.txt  build.ninja  cmake_install.cmake  compile_commands.json  toolchain.cmake
Lab5_Temp_Sensor/build-Group 2/.cmake/api/v1/reply/: cache-v2-9d1a111bff4c11d92be6.json  cmakeFiles-v1-b56838f425d9c85a6057.json  codemodel-v2-c25b7d5dbca6073511b1.json  index-2025-10-24T08-11-33-0733.json  target-Lab5_Temp_Sensor-Debug-500775ef3e9794348801.json
Lab5_Temp_Sensor/build-My Setup 1/: .ninja_deps  .ninja_log  CMakeCache.txt  Lab5_Temp_Sensor.dbg  Lab5_Temp_Sensor.dlt  Lab5_Temp_Sensor.hex  Lab5_Temp_Sensor.lst  Lab5_Temp_Sensor_callertable.txt  build.ninja  cmake_install.cmake  compile_commands.json  toolchain.cmake
Lab5_Temp_Sensor/build-My Setup 1/.cmake/api/v1/reply/: cache-v2-c1d34ce63c7b153889d0.json  cmakeFiles-v1-80d3ce3a28355a8a829e.json  codemodel-v2-3e1eed76334229ee54c2.json  index-2025-10-31T10-41-19-0737.json  target-Lab5_Temp_Sensor-Debug-3ac56f6064015e114d7f.json
Lab_6_interfacing-on-board-Buzzer/: CMakeLists.txt  compile_commands.json  main.c
Lab_6_interfacing-on-board-Buzzer/.meproject/: config.json
Lab_6_interfacing-on-board-Buzzer/.meproject/setup/: setup.json
Lab_6_interfacing-on-board-Buzzer/.meproject/setup/Debug/include/drv/: drv_pwm.h  drv_uart.h
Lab_6_interfacing-on-board-Buzzer/.meproject/setup/Debug/include/hal/: hal_target.h
Lab_6_interfacing-on-board-Buzzer/.meproject/setup/Debug/include/hal_ll_port/: hal_ll_core.h  hal_ll_tim_pin_map.h
Lab_6_interfacing-on-board-Buzzer/.meproject/setup/Debug/include/platform/: MikroSDK.Sprint
Lab_6_interfacing-on-board-Buzzer/.meproject/setup/Release/: PIC18F45K22.jcfg
Lab_6_interfacing-on-board-Buzzer/.meproject/setup/Release/include/hal_ll_port/: MikroSDK.HalLowLevel.ADC  hal_ll_adc.h  hal_ll_pps.h  hal_ll_spi_master.h
Lab_6_interfacing-on-board-Buzzer/.meproject/setup/Release/include/platform/: conversions.h
Lab_6_interfacing-on-board-Buzzer/build-My Setup 1/: .ninja_deps  .ninja_log  CMakeCache.txt  Lab_6_interfacing-on-board-Buzzer.dbg  Lab_6_interfacing-on-board-Buzzer.dlt  Lab_6_interfacing-on-board-Buzzer.hex  Lab_6_interfacing-on-board-Buzzer.lst  Lab_6_interfacing-on-board-Buzzer_callertable.txt  build.ninja  cmake_install.cmake  compile_commands.json  toolchain.cmake
projectLab2_FirstLight/: CMakeLists.txt  compile_commands.json  main.c
projectLab2_FirstLight/.meproject/: config.json
projectLab2_FirstLight/build-Group 2/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  projectLab2_FirstLight.dbg  projectLab2_FirstLight.dlt  projectLab2_FirstLight.hex  projectLab2_FirstLight.lst  projectLab2_FirstLight_callertable.txt  toolchain.cmake
soundbuzzer/: CMakeLists.txt  compile_commands.json  main.c
soundbuzzer/.meproject/: config.json
soundbuzzer/.meproject/setup/: setup.json
soundbuzzer/build-My setup 2/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  soundbuzzer.dbg  soundbuzzer.dlt  soundbuzzer.hex  soundbuzzer.lst  soundbuzzer_callertable.txt  toolchain.cmake
(+148 files in other folders)
